--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <p style="font-size:19px ;">Your faithfully,</p>
        <p>KEN KENAKI</p>
        <h1>Curiculam Vitae</h1>
-       <img src="/resource/img/kaneki.jpg" width="250" height="300">
+       <img src="/resource/img/kaneki.jpg" alt="Arion Photo" width="250" height="300">
        <h2>Personal information</h2>
        <ol>
            <li>Name             :Ken-Kenaki</li>
